# oeml

./: CMakeLists.txt  LICENSE  oeml.edl  readme.md
cmake/: add-enclave.cmake  arm-cross-patched.cmake  arm-cross.cmake  tensorflow_lite_micro.cmake
common/: common.h
docker/: Dockerfile-20.04  Makefile  run-20.04.sh
enc/: CMakeLists.txt  enc.cc  misc.h  oeml_model_data.h  test.cc
host/: CMakeLists.txt  args.h  capture.cc  capture.h  host.cc  host.h  main.cc
libs/: flatbuffers  gemmlowp  ruy  tensorflow
